--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose-paginate": "^5.0.3",
     "nodemon": "^2.0.7",
     "nunjucks": "^3.2.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
